@@ -607,6 +607,7 @@ wxMSW:
 - Fix appearance of wxToggleButtons with non default colours (Artur Wieczorek).
 - Fix drawing on wxDC when using right-to-left layout (Artur Wieczorek).
 - Fix wxGrid appearance and behaviour in RTL (Artur Wieczorek).
+- Fix creating wxBitmap from monochrome wxIcon or wxCursor (Artur Wieczorek).
 - Add paragraph spacing attributes support to wxTextCtrl (dannchr).
 - Show new style directory selector even for non existent paths (raychow).
 - Fix order of radial gradient stops (Alexandru Pana).
